--- a/MyWCFService/Web.config
+++ b/MyWCFService/Web.config
@@ -56,8 +56,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="MyDBContext" connectionString="data source=DESKTOP-L2250;initial catalog=Store;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="DbStore" connectionString="data source=DESKTOP-L2250;initial catalog=Store;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="MyDBContext" connectionString="data source=.;initial catalog=Store;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DbStore" connectionString="data source=.;initial catalog=Store;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
