hot fix - k :boom:

--- a/Mobie_store/Web.config
+++ b/Mobie_store/Web.config
@@ -103,24 +103,29 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_IDeleteService"/>
-        <binding name="BasicHttpBinding_IEditService"/>
-        <binding name="BasicHttpBinding_IViewService"/>
-        <binding name="BasicHttpBinding_IAddService"/>
-        <binding name="BasicHttpBinding_ILoginService"/>
+        <binding name="BasicHttpBinding_IAddService" />
+        <binding name="BasicHttpBinding_IDeleteService" />
+        <binding name="BasicHttpBinding_IEditService" />
+        <binding name="BasicHttpBinding_ILoginService" />
+        <binding name="BasicHttpBinding_IViewService" />
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:58365/api/AddService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IAddService"
-        contract="AddService.IAddService" name="BasicHttpBinding_IAddService"/>
-      <endpoint address="http://localhost:58365/api/DeleteService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IDeleteService"
-        contract="DeleteService.IDeleteService" name="BasicHttpBinding_IDeleteService"/>
-      <endpoint address="http://localhost:58365/api/EditService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IEditService"
-        contract="EditService.IEditService" name="BasicHttpBinding_IEditService"/>
-      <endpoint address="http://localhost:58365/api/LoginService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ILoginService"
-        contract="LoginService.ILoginService" name="BasicHttpBinding_ILoginService"/>
-      <endpoint address="http://localhost:58365/api/ViewService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IViewService"
-        contract="ViewService.IViewService" name="BasicHttpBinding_IViewService"/>
+      <endpoint address="http://localhost:58365/api/AddService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IAddService"
+        contract="AddService.IAddService" name="BasicHttpBinding_IAddService" />
+      <endpoint address="http://localhost:58365/api/DeleteService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IDeleteService"
+        contract="DeleteService.IDeleteService" name="BasicHttpBinding_IDeleteService" />
+      <endpoint address="http://localhost:58365/api/EditService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IEditService"
+        contract="EditService.IEditService" name="BasicHttpBinding_IEditService" />
+      <endpoint address="http://localhost:58365/api/LoginService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ILoginService"
+        contract="LoginService.ILoginService" name="BasicHttpBinding_ILoginService" />
+      <endpoint address="http://localhost:58365/api/ViewService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IViewService"
+        contract="ViewService.IViewService" name="BasicHttpBinding_IViewService" />
     </client>
   </system.serviceModel>
 </configuration>
